Add endpoint to create checklist item row
