# openapi/api_v1.yaml
@@ -516,6 +516,63 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /api/v1/checklists/{checklistId}/items/{itemId}/rows:
+    post:
+      summary: Create checklist item row
+      operationId: createChecklistItemRow
+      tags:
+        - checklistItem
+      parameters:
+        - name: checklistId
+          in: path
+          required: true
+          schema:
+            type: number
+            x-go-type: uint
+            minimum: 1
+            format: int64
+          description: Checklist ID
+        - name: itemId
+          in: path
+          required: true
+          schema:
+            type: number
+            x-go-type: uint
+            minimum: 1
+            format: int64
+          description: Checklist item id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateChecklistItemRowRequest'
+      responses:
+        '201':
+          description: Checklist item row created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChecklistItemRowResponse'
+        '404':
+          description: Checklist item or checklist not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '400':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 
 
 components:
